src/target/generated-tests/jtb/grammars/fm/EGTGrammar.jj
/* Generated by JTB 1.5.1 */
/* A small grammar for testing -eg / JTB_EG JTB option not present in jtbgram.jtb */
options
{
  STATIC = false;
  // (default true)
  IGNORE_CASE = true;
  // (default false)
  //  DEBUG_PARSER = true; // (default false)
  // Relative path of Java files generated by JavaCC from the JJ file
  OUTPUT_DIRECTORY = "../../../../../target/generated-tests/jj/grammars/fm";
  // JTB_D = "../../../../../target/generated-tests/jtb/grammars/fm";
  // JTB_P = "grammars.fm";
  // JTB_O = "../../../../../target/generated-tests/jtb/grammars/fm/EGTGrammar.jj";
  // out file (default jtb.out.jj)
  // JTB_EG = "EDU.purdue.jtb.parser.freemarker.egt.ExternalGeneratorTester";
  // need new JavaCC Eclipse plugin with classpath
  // JTB_VIS = "Void,void,None;Vis2,int,java.lang.String";
  // first needed for dumper and formatter, second for tests
  // JTB_TK = true;
  // special tokens (default true)
  // JTB_TKJJ = true;
  // special tokens (default true)
  // JTB_JD = false;
  TOKEN_FACTORY = "grammars.fm.syntaxtree.NodeConstants"; // added by JTB 1.5.1

// javadoc comments (default true)
}

PARSER_BEGIN(EGTGrammar)
package grammars.fm;

import grammars.fm.visitor.*;
import grammars.fm.syntaxtree.*;


public class EGTGrammar {


  /* --- User code --- */

  public static void main(String args[]) {
    System.err.flush();
    System.out.println("EGTGrammar Reading...");
    EGTGrammar egtg = new EGTGrammar(System.in);
    try {
      System.out.println("... Parsing...");
      classDeclaration cd = egtg.classDeclaration();
      IVis2Visitor v = new DepthFirstVis2Visitor();
      System.out.println("... Visiting...");
      int rc = cd.accept(v, "  ");
      System.out.println("EGTGrammar ended.");
      System.exit(0);
    }
    catch (final Exception e) {
      System.out.flush();
      System.err.println("Oops!");
      System.err.println(e.getMessage());
      System.exit(-1);
    }
  }
}

PARSER_END(EGTGrammar)

classDeclaration classDeclaration() :
{
  // --- JTB generated node declarations ---
  skip n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
  NodeListOptional n5 = new NodeListOptional();
  NodeSequence n6 = null;
  method n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
  NodeToken n12 = null;
  Token n13 = null;
  classDeclaration jtbNode = null;
}
{
  // --- user BNFProduction ExpansionChoices ---
  n0 = skip()
  n2 = "class"
  { n1 = (NodeToken) n2; }
  className()
  n4 = "{"
  { n3 = (NodeToken) n4; }
  (
    { n6 = new NodeSequence(1); }
    n7 = method()
    { n6.addNode(n7); }
    { n5.addNode(n6); }
  )*
  { n5.nodes.trimToSize(); }
  n9 = "}"
  { n8 = (NodeToken) n9; }
  n11 = "."
  { n10 = (NodeToken) n11; }
  n13 = < EOF >
  { n13.beginColumn++; }
  { n13.endColumn++; }
  { n12 = (NodeToken) n13; }
  { jtbNode = new classDeclaration(n0, n1, n3, n5, n8, n10, n12); }
  { return jtbNode; }
}

className className() :
{
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  className jtbNode = null;
  // --- user BNFProduction java block ---
  // leave b uninitialized (for code coverage)
  char b, e = '\u0000';
}
{
  // --- user BNFProduction ExpansionChoices ---
  n1 = < ID >
  { n0 = (NodeToken) n1; }
  {
    b = '\b';
  //    e = 'é';
  }
  { jtbNode = new className(n0); }
  { return jtbNode; }
}

method method() :
{
  // --- JTB generated node declarations ---
  methodName n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
  NodeList n3 = new NodeList();
  NodeSequence n4 = null;
  instruction n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  method jtbNode = null;
}
{
  // --- user BNFProduction ExpansionChoices ---
  n0 = methodName()
  n2 = "("
  { n1 = (NodeToken) n2; }
  (
    { n4 = new NodeSequence(1); }
    n5 = instruction()
    { n4.addNode(n5); }
    { n3.addNode(n4); }
  )+
  { n3.nodes.trimToSize(); }
  n7 = ")"
  { n6 = (NodeToken) n7; }
  { jtbNode = new method(n0, n1, n3, n6); }
  { return jtbNode; }
}

methodName methodName() :
{
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  methodName jtbNode = null;
}
{
  // --- user BNFProduction ExpansionChoices ---
  n1 = < ID >
  { n0 = (NodeToken) n1; }
  { jtbNode = new methodName(n0); }
  { return jtbNode; }
}

instruction instruction() :
{
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  instruction jtbNode = null;
}
{
  // --- user BNFProduction ExpansionChoices ---
  n1 = < ID >
  { n0 = (NodeToken) n1; }
  n3 = ";"
  { n2 = (NodeToken) n3; }
  { jtbNode = new instruction(n0, n2); }
  { return jtbNode; }
}

JAVACODE skip skip() /*%*/ 
{
  Token tk = getNextToken();
  return new skip();
}

TOKEN :
{
  < A_BS_B : "a\bb" >
| < ES : "\u00c3\u00a9\u00c3\u00a8\u00c3\u00aa" >
| < SYN_ESC : "\u0016\u001b" >
| < ID : ( ["a"-"z", "A"-"Z", "0"-"9"] )+ >
}

SKIP :
{
  < WS : ( " " | "\t" | "\n" | "\r" ) >
}
